changes related to assignment2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <a routerLink="/home" routerLinkActive="active">Home</a>
   <a routerLink="/pipe-demo" routerLinkActive="active">Pipe</a>
   <a routerLink="/directive-demo" routerLinkActive="active">Directive</a>
+  <a routerLink="/register-demo" routerLinkActive="active">Register</a>
 </nav>
 <router-outlet></router-outlet>
