--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* Master Styles */
+@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 h1 {
     color: #369; 
     font-family: Arial, Helvetica, sans-serif;   
@@ -150,4 +151,38 @@ h1 {
     color: rgb(83, 83, 83); 
     /* font-family: Cambria, Georgia;  */
     margin: 5px;
+  }
+
+  .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  input{
+    width: 100%;
+  }
+
+  .container h2{
+    text-align: center; 
+  }
+
+  label{
+    font-size:15px;
+    margin-left: 5px;
+  }
+
+  .row{
+    margin-top: 30px;
+  }
+
+  .form-group.required .control-label:after {
+    content:"*";
+    color:red;
+  }
+
+  .submit-btn{
+    margin: auto;
   }
