--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,37 +1,66 @@
 <div class="container">
     <h2>Employee Registration Form</h2>
-    <div class="row">
-        <div class="form-group required col-md-6">
-            <label for="name" class="control-label">Full Name</label>
-            <input type="text" class="form-control" id="name" required [(ngModel)]="name" name="name">
-            <span>{{ name }}</span>
+    <form #empForm="ngForm">
+        <div class="row">
+            <div class="form-group required">
+                <label class="control-label">Full Name</label>
+                <input type="text" class="form-control" #name="ngModel" name="fullname" required ngModel>
+                <small [class.d-none]="name.valid || name.untouched" class="text-danger">Full Name is required</small>
+            </div>
+            <!-- {{ name.invalid }} -->
+            <div class=" form-group required">
+                <label class="control-label">Email</label>
+                <input type="email" class="form-control" #email="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" name="email" required ngModel>
+                <small [class.d-none]="email.valid || email.untouched" class="text-danger">Please use a valid email address</small>
+            </div>
+            <!-- {{ email.className }} -->
+            <div class="form-group required">
+                <label class="control-label">Mobile Number</label>
+                <input type="tel" class="form-control" #phone="ngModel" pattern="\d{10}$" name="phone" required ngModel>
+                <div *ngIf="phone.errors && (phone.invalid && phone.touched)">
+                    <small class="text-danger" *ngIf="phone.errors['required']">Mobile number is required</small>
+                    <small class="text-danger" *ngIf="phone.errors['pattern']">Mobile number must be 10 digits</small>
+                </div>
+                
+            </div>
+            <div class="form-group">
+                <label class="control-label">Country of Origin</label>
+                <select class="form-select" name="country" ngModel="[(country)]">
+                    <option value="">-- Select Country --</option>
+                    <option *ngFor="let country of countries" value="{{ country }}">{{ country }}</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Shift Preferences</label>
+                <div class="form-check">
+                    <input type="radio" name="timePreference" class="form-check-input" value="morning" ngModel>
+                    <label class="form-check-label">Morning (9AM-6PM)</label>
+                </div>
+                <div class="form-check">
+                    <input type="radio" name="timePreference" class="form-check-input" value="afternoon" ngModel>
+                    <label class="form-check-label">Afternoon (3PM-12AM)</label>
+                </div>
+                <div class="form-check">
+                    <input type="radio" name="timePreference" class="form-check-input" value="night" ngModel>
+                    <label class="form-check-label">Night (9PM-6AM)</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check mb-3">
+                    <input type="checkbox" class="form-check-input" name="terms-and-condition" ngModel>
+                    <label class="form-check-label">Agree to Terms and Conditions</label>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-            <label for="gender">Gender</label>
-            <input type="text" class="form-control" id="gender" required [(ngModel)]="gender" name="gender">
-            <span>{{ gender }}</span>
+        <div class="row">
+            <div class="col-md-12">
+                <input type="submit" value="Submit" class="btn btn-outline-secondary">
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 form-group required">
-            <label for="email" class="control-label">Email</label>
-            <input type="text" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="col-md-6">
-            <label for="phone">Mobile Number</label>
-            <input type="text" class="form-control" id="phone" name="phone" required>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 form-group">
-            <label for="dob">Date of Birth</label>
-            <input type="date" class="form-control" id="dob" name="dob" required>
-        </div>
-    </div>
+    </form>
+</div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <input type="submit" value="Submit" class="btn btn-primary submit-btn">
-        </div>
-    </div>
+<div class="container">
+    <h5>JSON Form Data</h5>
+<pre>{{ empForm.value | json }}</pre>
 </div>
