--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* Master Styles */
-@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+@import url('https://unpkg.com/bootstrap@5.2.2/dist/css/bootstrap.min.css');
 h1 {
     color: #369; 
     font-family: Arial, Helvetica, sans-serif;   
@@ -175,12 +175,20 @@ h1 {
   }
 
   .row{
-    margin-top: 30px;
+    margin-top: 15px;
   }
 
   .form-group.required .control-label:after {
     content:"*";
     color:red;
+  }
+
+  .form-check-label{
+    color: black;
+  }
+
+  .form-group{
+    margin-top:15px;
   }
 
   .submit-btn{
